# lincstation_proxmox_cli

./: .gitignore  README.md  pyproject.toml  setup.py
.gitea/workflows/: build.yml
debian/: changelog  control  gbp.conf
scripts/: build_deb.sh
src/lincmox_cli/: __init__.py
src/lincmox_cli/cli/: cli.py  main.py
